--- a/scripts/Modelo.ipynb
+++ b/scripts/Modelo.ipynb
@@ -2,19 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.pipeline import make_pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +168,7 @@
        "[7763 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jeremy\\AppData\\Local\\Temp\\ipykernel_19148\\2955146718.py:3: FutureWarning: \n",
+      "C:\\Users\\pepeh\\AppData\\Local\\Temp\\ipykernel_1220\\2955146718.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -236,7 +240,7 @@
        "<Axes: xlabel='count', ylabel='Category'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -259,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -276,15 +280,15 @@
       "<>:7: SyntaxWarning: invalid escape sequence '\\S'\n",
       "<>:8: SyntaxWarning: invalid escape sequence '\\]'\n",
       "<>:10: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\Jeremy\\AppData\\Local\\Temp\\ipykernel_19148\\2045684286.py:4: SyntaxWarning: invalid escape sequence '\\S'\n",
+      "C:\\Users\\pepeh\\AppData\\Local\\Temp\\ipykernel_1220\\2045684286.py:4: SyntaxWarning: invalid escape sequence '\\S'\n",
       "  resumeText = re.sub('http\\S+\\s*', ' ', resumeText)  # remove URLs\n",
-      "C:\\Users\\Jeremy\\AppData\\Local\\Temp\\ipykernel_19148\\2045684286.py:6: SyntaxWarning: invalid escape sequence '\\S'\n",
+      "C:\\Users\\pepeh\\AppData\\Local\\Temp\\ipykernel_1220\\2045684286.py:6: SyntaxWarning: invalid escape sequence '\\S'\n",
       "  resumeText = re.sub('#\\S+', '', resumeText)  # remove hashtags\n",
-      "C:\\Users\\Jeremy\\AppData\\Local\\Temp\\ipykernel_19148\\2045684286.py:7: SyntaxWarning: invalid escape sequence '\\S'\n",
+      "C:\\Users\\pepeh\\AppData\\Local\\Temp\\ipykernel_1220\\2045684286.py:7: SyntaxWarning: invalid escape sequence '\\S'\n",
       "  resumeText = re.sub('@\\S+', '  ', resumeText)  # remove mentions\n",
-      "C:\\Users\\Jeremy\\AppData\\Local\\Temp\\ipykernel_19148\\2045684286.py:8: SyntaxWarning: invalid escape sequence '\\]'\n",
+      "C:\\Users\\pepeh\\AppData\\Local\\Temp\\ipykernel_1220\\2045684286.py:8: SyntaxWarning: invalid escape sequence '\\]'\n",
       "  resumeText = re.sub('[%s]' % re.escape(\"\"\"!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~\"\"\"), ' ', resumeText)  # remove punctuations\n",
-      "C:\\Users\\Jeremy\\AppData\\Local\\Temp\\ipykernel_19148\\2045684286.py:10: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\pepeh\\AppData\\Local\\Temp\\ipykernel_1220\\2045684286.py:10: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  resumeText = re.sub('\\s+', ' ', resumeText)  # remove extra whitespace\n"
      ]
     }
@@ -305,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +389,7 @@
        "4  SKILLS Bitcoin Ethereum Solidity Hyperledger B...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +493,7 @@
        "4  SKILLS Bitcoin Ethereum Solidity Hyperledger B...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -543,114 +547,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn import metrics"
+    "# Tus datos ya están preparados y divididos, entonces procedemos con SVM\n",
+    "# Configuramos el clasificador SVM con balanceo de clases\n",
+    "svm_model = SVC(class_weight='balanced', kernel='linear')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ahora aplicamos validación cruzada\n",
+    "# Define el número de folds para la validación cruzada\n",
+    "n_folds = 5\n",
+    "# Realiza validación cruzada y calcula la precisión\n",
+    "scores = cross_val_score(svm_model, WordFeatures, requiredTarget, cv=n_folds, scoring='accuracy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of KNeighbors Classifier on training set: 0.93\n",
-      "Accuracy of KNeighbors Classifier on test set: 0.91\n"
+      "Accuracy for each fold: [0.98840953 0.98840953 0.99034127 0.99033505 0.9935567 ]\n",
+      "Mean CV Accuracy: 0.9902104174826242\n",
+      "Standard Deviation of CV Accuracy: 0.0018823741806729664\n"
      ]
     }
    ],
    "source": [
-    "clf = KNeighborsClassifier(n_neighbors=15)\n",
-    "clf = clf.fit(X_train, y_train)\n",
-    "yp = clf.predict(X_test)\n",
-    "print('Accuracy of KNeighbors Classifier on training set: {:.2f}'.format(clf.score(X_train, y_train)))\n",
-    "print('Accuracy of KNeighbors Classifier on test set: {:.2f}'.format(clf.score(X_test, y_test)))"
+    "# Imprime los resultados de la validación cruzada\n",
+    "print(f\"Accuracy for each fold: {scores}\")\n",
+    "print(f\"Mean CV Accuracy: {np.mean(scores)}\")\n",
+    "print(f\"Standard Deviation of CV Accuracy: {np.std(scores)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Para una evaluación más detallada, puedes entrenar el modelo en el conjunto de entrenamiento completo y evaluarlo en el conjunto de prueba\n",
+    "# Esto es opcional pero puede proporcionar más información sobre el rendimiento del modelo\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "y_pred = svm_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reporte de clasificación:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00       130\n",
       "           1       1.00      1.00      1.00        78\n",
-      "           2       0.96      1.00      0.98        74\n",
-      "           3       0.99      1.00      1.00       146\n",
+      "           2       1.00      1.00      1.00        74\n",
+      "           3       1.00      1.00      1.00       146\n",
       "           4       1.00      1.00      1.00        71\n",
-      "           5       0.94      0.88      0.91        34\n",
-      "           6       0.80      0.81      0.80       241\n",
-      "           7       0.98      1.00      0.99        63\n",
-      "           8       0.83      0.76      0.79       249\n",
+      "           5       1.00      0.97      0.99        34\n",
+      "           6       0.97      0.99      0.98       241\n",
+      "           7       1.00      1.00      1.00        63\n",
+      "           8       0.98      0.96      0.97       249\n",
       "           9       1.00      1.00      1.00       230\n",
-      "          10       0.80      0.86      0.83       237\n",
+      "          10       0.99      1.00      0.99       237\n",
       "\n",
-      "    accuracy                           0.91      1553\n",
-      "   macro avg       0.94      0.94      0.94      1553\n",
-      "weighted avg       0.91      0.91      0.91      1553\n",
+      "    accuracy                           0.99      1553\n",
+      "   macro avg       0.99      0.99      0.99      1553\n",
+      "weighted avg       0.99      0.99      0.99      1553\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "# Genera el reporte de clasificación\n",
-    "report = classification_report(y_test, yp)\n",
-    "\n",
-    "print(\"Reporte de clasificación:\")\n",
-    "print(report)"
+    "# Imprimir el reporte de clasificación\n",
+    "print(classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matriz de Confusión:\n",
-      "[[130   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0  78   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0  74   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0 146   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0  71   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0  30   0   0   0   0   4]\n",
-      " [  0   0   0   0   0   1 195   1  22   0  22]\n",
-      " [  0   0   0   0   0   0   0  63   0   0   0]\n",
-      " [  0   0   2   1   0   0  34   0 188   0  24]\n",
-      " [  0   0   0   0   0   0   0   0   0 230   0]\n",
-      " [  0   0   1   0   0   1  15   0  17   0 203]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "# Calcula la matriz de confusión\n",
-    "conf_matrix = confusion_matrix(y_test, yp)\n",
-    "\n",
-    "print(\"Matriz de Confusión:\")\n",
-    "print(conf_matrix)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +648,7 @@
     "    def __init__(self) -> None:\n",
     "        self.le = le\n",
     "        self.word_vectorizer = word_vectorizer\n",
-    "        self.clf = clf\n",
+    "        self.clf = svm_model #checar\n",
     "\n",
     "    def predict(self, resume):\n",
     "        feature = self.word_vectorizer.transform([resume])\n",
@@ -1006,7 +996,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
